--- a/src/components/TitleScreen.css
+++ b/src/components/TitleScreen.css
@@ -25,6 +25,14 @@
   filter: drop-shadow(3px 3px 0px rgba(0, 0, 0, 0.3));
 }
 
+/* Add specific styling for winning mouth */
+img[src*="winning-mouth"] {
+  width: 400px;
+  transform: translateY(
+    -20px
+  ); /* Slight upward adjustment to maintain visual balance */
+}
+
 .game-title {
   font-size: 5rem;
   margin: 0;
